# test_blog

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
blog/: admin.py  forms.py  models.py  tasks.py  tokens.py  ui_views.py  views.py
blog/migrations/: 0001_initial.py
blog/templatetags/: filter_extras.py
static/css/: style.css  style.css.map  style.scss
static/js/: scripts.js
templates/: base.html
templates/mail_template/: login_failed.txt  new_comment_added.html  sign_up.txt  unsubscribe_fail.html  unsubscribe_success.html
templates/post/: form.html  list.html
templates/registration/: login.html  register.html
templates/ui/: base.html  post.html  post_list.html
test_blog/: .env  celery.py  settings.py  urls.py
